--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css')
         link(href='https://fonts.googleapis.com/css?family=Roboto:400,500,700', rel='stylesheet')
-        link(rel='stylesheet', href='../style.css')
+        link(rel='stylesheet', href='../../style.css')
     body
       include nav
       .container
